--- a/public/map.html
+++ b/public/map.html
@@ -18,7 +18,7 @@
       left: -50px;
       min-width: 300px;
       overflow: auto;
-      max-height: 200px;
+      max-height: 300px;
 
     }
 
@@ -61,8 +61,8 @@
 
   </style>
 
-  <title>GeoMet OpenLayers Popup Example</title>
-  <meta name="description" content="GeoMet OpenLayers Popup Example">
+  <title>NFI OpenLayers Popup Example</title>
+  <meta name="description" content="NFI OpenLayers Popup Example">
   <meta name="author" content="CCMEP">
 
 <!--   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.3.0/ol.css" type="text/css"/>
@@ -70,6 +70,7 @@
  -->
   <link rel="stylesheet" href="./ol.css" type="text/css"/>
   <script src="./ol.js"></script>
+  <script defer src="https://unpkg.com/pretty-json-custom-element/index.js"></script>
 
 </head>
 
