pretty json included directly

--- a/public/map.html
+++ b/public/map.html
@@ -70,7 +70,7 @@
  -->
   <link rel="stylesheet" href="./ol.css" type="text/css"/>
   <script src="./ol.js"></script>
-  <script defer src="https://unpkg.com/pretty-json-custom-element/index.js"></script>
+  <script defer src="./pretty-json.js"></script>
 
 </head>
 
