map add layer toogle

--- a/public/map.html
+++ b/public/map.html
@@ -75,6 +75,11 @@
 </head>
 
 <body>
+  <div align="left">
+    <button onclick="switchbluegrid()">Toggle visibility of Inspire 1km grid (blue)</button>&nbsp;&nbsp;
+    <button onclick="switchhelpergrid()">Toggle visibility of HelperGrid (2012 NFI plots)</button>
+    &nbsp;&nbsp;Click on the map to show data of NFI clusters!
+  </div>
   <div id="map" style="height: 800px;"></div>
   <div id="popup" class="ol-popup">
     <a href="#" id="popup-closer" class="ol-popup-closer"></a>
