--- a/public/map.html
+++ b/public/map.html
@@ -85,13 +85,13 @@
     <script src="https://cdn.jsdelivr.net/npm/ol@v7.3.0/dist/ol.js"></script>
 
     <!-- Includes an additional JavaScript file (pretty-json.js) for formatting JSON -->
-    <script defer src="./pretty-json.js"></script>
+    <script defer src="https://unpkg.com/pretty-json-custom-element/index.js"></script>
+    <!-- <script defer src="./pretty-json.js"></script> -->
   </head>
 
   <body>
     <!-- Control buttons for various functions such as navigation and layer visibility toggling -->
     <div align="left">
-      <button onclick="back2main()">Back to Documentation</button>&nbsp;&nbsp;
       <button onclick="switchbluegrid()">
         Toggle visibility of Inspire 1km grid (blue)</button
       >&nbsp;&nbsp;
